Changes with Apache 1.3.12

  *) Cast integer ap_wait_t values in http_main.c to get rid of compile
     time errors on platforms where "ap_wait_t" is not defined as "int"
     (currently only the NEXT and UTS21 platforms).
     [Gary Bickford <garyb@fxt.com>, Ralf S. Engelschall] PR#5053

  *) The default suexec path was HTTPD_ROOT/sbin/suexec if not
     configured via APACI. Changed to HTTPD_ROOT/bin/suexec.
     [Lars Eilebrecht]

  *) Add an explicit charset=iso-8859-1 to pages generated by
     ap_send_error_response(), such as the default 404 page.
     [Marc Slemko]

  *) Add the AddDefaultCharset directive. This allows you to specify
     the given character set on any document that does not have one
     explicitly specified in the headers.  [Marc Slemko, Jim Jagielski]

  *) Properly escape various messages output to the client from a number
     of modules and places in the core code.  [Marc Slemko]

  *) Change mod_actions, mod_autoindex, mod_expires, and mod_log_config to
     not consider any parameters such as charset when making decisions 
     based on content type.  This does remove some functionality for 
     some users, but means that when these modules are configured to do 
     particular things with particular MIME types, the charset should 
     not be included.  A better way of addressing this for users who 
     want to set things on a per charset basis is necessary in the future.  
     [Marc Slemko]

  *) mod_include now entity encodes output from "printenv" and "echo var"
     by default.  The encoding for "echo var" can be set to URL encoding
     or no encoding using the new "encoding" attribute to the echo tag.
     [Marc Slemko]
 
Changes with Apache 1.3.11

  *) MPE builds are no longer stripped, which caused the executable
     to not work. [Mark Bixby]

Changes with Apache 1.3.10

  *) Fixed parsing of TAKE13-based configuration directives.
     [Steffen Roller <sr@daa.de>] PR#5550
